<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homepage_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.HomepageFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/obey_constraint"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/image_height_constraint"
        app:layout_constraintEnd_toEndOf="parent"
        android:adjustViewBounds="true"
        android:id="@+id/home_page_background"
        android:src="@drawable/home_screen_background"
        android:scaleType="fitCenter"
        android:layout_margin="@dimen/whole_page_padding"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/middle_divider_height"
        android:id="@+id/image_height_constraint"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_started_home_page"
        android:id="@+id/get_started_text"
        android:textSize="@dimen/h3_title_size"
        android:paddingStart="@dimen/home_page_start_padding"
        android:paddingBottom="@dimen/inter_text_padding"
        android:textStyle="bold"
        android:textColor="@color/medium_grey"
        app:layout_constraintTop_toBottomOf="@id/image_height_constraint"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/home_page_title"
        android:maxEms="10"
        android:paddingStart="@dimen/home_page_start_padding"
        android:paddingBottom="@dimen/inter_text_padding"
        android:textSize="@dimen/h2_title_size"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/get_started_text"
        app:layout_constraintBottom_toTopOf="@id/button_container"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/home_page_upsell"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_container"
        android:paddingStart="@dimen/home_page_start_padding"
        android:paddingEnd="@dimen/home_page_end_padding"
        android:paddingBottom="@dimen/end_page_bottom_padding"
        app:layout_constraintTop_toBottomOf="@id/home_page_title"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/skip_now_button"
            android:text="@string/skip_btn_text"
            android:textColor="@color/medium_grey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/next_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/next_btn_text"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:backgroundTint="@color/deep_pink"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>